@@ -54,7 +54,7 @@ public final class MethodHandleRecordCodecBuilder<A> {
             } else if (ctors.size() > 1) {
                 throw new IllegalArgumentException("Multiple constructors with " + fields.size() + " parameters found");
             }
-            return lookup.unreflectConstructor(ctors.get(0));
+            return lookup.unreflectConstructor(ctors.getFirst());
         });
     }
 
@@ -216,10 +216,10 @@ public final class MethodHandleRecordCodecBuilder<A> {
         }
     }
 
-    private static ConstantDynamic conDyn(String Descriptor, int i) {
+    private static ConstantDynamic conDyn(String descriptor, int i) {
         return new ConstantDynamic(
             "_",
-            Descriptor,
+            descriptor,
             new Handle(
                 Opcodes.H_INVOKESTATIC,
                 Type.getInternalName(MethodHandles.class),
